# mtg-deck-builder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/mtg_deck_builder/: __init__.py  __main__.py  brackets.py  cache.py  card.py  cli.py  collection.py  commander.py  config.py  db.py  graph.py  model.py  report.py  selector.py
src/mtg_deck_builder/api/: edhrec.py  scryfall.py  spellbook.py
tests/: conftest.py  test_card.py  test_collection.py  test_commander.py  test_db.py  test_deck_quality.py  test_graph.py  test_model.py  test_selector.py
